# openstack-janitor

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/openstack_janitor/: __init__.py  age.py  cli.py  connection.py  reporting.py
src/openstack_janitor/detectors/: __init__.py  base.py  images.py  ports.py
tests/: conftest.py  test_age.py  test_cli.py  test_connection.py  test_images_detector.py  test_instances_detector.py  test_ports_detector.py  test_reporting.py  test_snapshots_detector.py  test_volumes_detector.py
